--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "dev": "cross-env NODE_ENV=development nodemon apps/api/server.js"
+    "dev": "cross-env NODE_ENV=development nodemon apps/api/server.js",
+    "postinstall": "ngcc --properties es2015 browser module main"
   },
   "private": true,
   "dependencies": {
-    "express": "4.17.1",
-    "tslib": "^2.0.0",
+    "@angular/animations": "^12.2.0",
+    "@angular/common": "^12.2.0",
+    "@angular/compiler": "^12.2.0",
+    "@angular/core": "^12.2.0",
+    "@angular/forms": "^12.2.0",
+    "@angular/platform-browser": "^12.2.0",
+    "@angular/platform-browser-dynamic": "^12.2.0",
+    "@angular/router": "^12.2.0",
     "@aws-sdk/client-ses": "^3.10.0",
     "@elastic/elasticsearch": "^7.12.0",
     "@slack/webhook": "^6.0.0",
@@ -24,17 +31,21 @@
     "compress-images": "^1.9.8",
     "compression": "^1.7.4",
     "connect-timeout": "^1.9.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto-random-string": "^3.3.1",
     "date-fns": "^2.19.0",
     "dotenv-safe": "^8.2.0",
     "ejs": "^3.1.6",
     "expeditious-engine-redis": "^0.1.2",
+    "express": "4.17.1",
     "express-expeditious": "^5.1.1",
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.10.0",
     "faker": "^4.1.0",
     "gifsicle": "^5.2.0",
+    "handlebars": "^4.7.7",
+    "hbs": "^4.1.2",
     "helmet": "^3.23.3",
     "html-pdf": "^2.2.0",
     "html-pdf-node": "^1.0.7",
@@ -91,15 +102,22 @@
     "swagger-ui-express": "^4.1.6",
     "tmp": "^0.2.1",
     "trim-request": "^1.0.6",
+    "tslib": "^2.0.0",
     "utf8": "^3.0.0",
     "uuid": "^8.3.2",
     "validator": "^13.5.2",
-    "cookie-parser": "^1.4.5",
-    "handlebars": "^4.7.7",
-    "hbs": "^4.1.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^12.1.1",
+    "@angular-eslint/eslint-plugin": "~12.3.0",
+    "@angular-eslint/eslint-plugin-template": "~12.3.0",
+    "@angular-eslint/template-parser": "~12.3.0",
+    "@angular/compiler-cli": "^12.2.0",
+    "@angular/language-service": "^12.2.0",
+    "@nrwl/angular": "^12.10.0",
     "@nrwl/cli": "12.9.0",
+    "@nrwl/cypress": "12.10.0",
     "@nrwl/eslint-plugin-nx": "12.9.0",
     "@nrwl/express": "^12.9.0",
     "@nrwl/jest": "12.9.0",
@@ -112,24 +130,27 @@
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
-    "eslint": "7.22.0",
-    "eslint-config-prettier": "8.1.0",
-    "jest": "27.0.3",
-    "prettier": "^2.3.1",
-    "ts-jest": "27.0.3",
-    "typescript": "~4.3.5",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "cross-env": "^7.0.3",
+    "cypress": "^8.3.0",
+    "eslint": "7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-formidable": "^4.0.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.8",
+    "jest": "27.0.3",
+    "jest-preset-angular": "10.0.1",
     "lint-staged": "^10.5.4",
     "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
-    "prettier-eslint": "^11.0.0"
+    "prettier": "^2.3.1",
+    "prettier-eslint": "^11.0.0",
+    "ts-jest": "27.0.3",
+    "typescript": "~4.3.5"
   }
 }
