--- a/package.json
+++ b/package.json
@@ -218,6 +218,7 @@
     "@nrwl/tao": "12.9.0",
     "@nrwl/workspace": "12.9.0",
     "@types/angular": "^1.8.1",
+    "@types/compression": "^1.7.2",
     "@types/core-js": "^2.5.4",
     "@types/express": "4.17.0",
     "@types/file-saver": "^2.0.3",
