--- a/apps/api/.eslintrc.json
+++ b/apps/api/.eslintrc.json
@@ -3,18 +3,23 @@
   "ignorePatterns": ["!**/*"],
   "overrides": [
     {
+      "env": {
+        "node": true,
+        "mocha": true
+      },
+
+      "parserOptions": {
+        "ecmaVersion": 9
+      },
+
+      "globals": {
+        "Promise": true,
+        "_": true,
+        "async": true,
+        "expect": true,
+        "jest": true
+      },
       "files": ["*.js"],
-      "extends": [
-        "plugin:@nrwl/nx/javascript",
-        "formidable/rules/eslint/best-practices/on",
-        "formidable/rules/eslint/es6/on",
-        "formidable/rules/eslint/errors/off",
-        "formidable/rules/eslint/strict/on",
-        "formidable/rules/eslint/node/off",
-        "formidable/rules/eslint/style/on",
-        "formidable/rules/eslint/variables/on",
-        "prettier"
-      ],
       "rules": {
         "callback-return": [
           "error",
@@ -48,8 +53,6 @@
         "no-unexpected-multiline": ["warn"],
         "no-unreachable": ["warn"],
         "no-magic-numbers": ["off"],
-        "no-async-promise-executor": ["off"],
-        "consistent-return": ["off"],
         "max-params": ["off"],
         "max-len": ["off"],
         "max-nested-callbacks": ["off"],
@@ -100,7 +103,19 @@
         ],
         "semi-style": ["warn", "last"],
         "space-before-function-paren": ["off", 2]
-      }
+      },
+      "extends": [
+        "formidable/rules/eslint/best-practices/on",
+        "formidable/rules/eslint/es6/on",
+        "formidable/rules/eslint/errors/off",
+        "formidable/rules/eslint/strict/on",
+        "formidable/rules/eslint/node/off",
+        "formidable/rules/eslint/style/on",
+        "formidable/rules/eslint/variables/on",
+        "prettier"
+      ],
+
+      "plugins": ["prettier"]
     }
   ]
 }
