--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "intersection-observer": "^0.11.0",
     "intl-tel-input": "^14.1.0",
     "jest-mock": "^27.2.5",
+    "jest-useragent-mock": "^0.1.1",
     "jimp": "^0.14.0",
     "jsonwebtoken": "^8.5.1",
     "kue": "^0.11.6",
@@ -266,6 +267,7 @@
     "serverless": "^2.30.3",
     "serverless-apigw-binary": "^0.4.4",
     "serverless-offline": "^6.8.0",
+    "supertest": "^6.1.6",
     "ts-jest": "27.0.3",
     "ts-node": "~8.3.0",
     "tslint": "^6.1.3",
